[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ancpi"
version = "0.1.0"
description = "Python client for Romania's ANCPI cadastral GIS endpoints"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
geo = ["shapely>=2.0", "geojson>=3.0"]
transform = ["pyproj>=3.6"]
all = ["shapely>=2.0", "geojson>=3.0", "pyproj>=3.6"]

[project.scripts]
ancpi = "ancpi.cli:cli"
